--- a/index.ipynb
+++ b/index.ipynb
@@ -47,22 +47,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Driver Class here with properties for each instance variable"
+    "# Define Driver Class here with properties for each instance variable\n",
+    "class Driver:\n",
+    "    \n",
+    "    def get_first(self):\n",
+    "        return self._first\n",
+    "    \n",
+    "    def set_first(self, first):\n",
+    "        self._first = first\n",
+    "        \n",
+    "    def del_first(self):\n",
+    "        del self._first\n",
+    "        \n",
+    "    def get_last(self):\n",
+    "        return self._last\n",
+    "    \n",
+    "    def set_last(self, last):\n",
+    "        self._last = last\n",
+    "    \n",
+    "    def del_last(self):\n",
+    "        del self._last\n",
+    "        \n",
+    "    def get_miles_driven(self):\n",
+    "        return self._miles_driven\n",
+    "    \n",
+    "    def set_miles_driven(self, miles_driven):\n",
+    "        self._miles_driven = miles_driven\n",
+    "    \n",
+    "    def del_miles_driven(self):\n",
+    "        del self._miles_driven\n",
+    "        \n",
+    "    def get_rating(self):\n",
+    "        return self._rating\n",
+    "    \n",
+    "    def set_rating(self, rating):\n",
+    "        self._rating = rating\n",
+    "    \n",
+    "    def del_rating(self):\n",
+    "        del self._rating\n",
+    "        \n",
+    "    first = property(get_first, set_first, del_first)\n",
+    "    last = property(get_last, set_last, del_last)\n",
+    "    miles_driven = property(get_miles_driven, set_miles_driven, del_miles_driven)\n",
+    "    rating = property(get_rating, set_rating, del_rating)\n",
+    "    \n",
+    "    def fullname(self):\n",
+    "        return \"{} {}\".format(self.first, self.last)\n",
+    "    \n",
+    "    def greet_passenger(self):\n",
+    "        return \"Hello, I will be your driver today. My name is {}\".format(self.fullname())\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rachel\n",
+      "Jensen\n",
+      "100\n",
+      "4.9\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Hello, I will be your driver today. My name is Rachel Jensen'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "driver = Driver()\n",
     "driver.first = \"Rachel\"\n",
@@ -87,22 +153,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Passenger Class here with properties for each instance variable"
+    "# Define Passenger Class here with properties for each instance variable\n",
+    "class Passenger:\n",
+    "    def get_first(self):\n",
+    "        return self._first\n",
+    "    \n",
+    "    def set_first(self, first):\n",
+    "        self._first = first\n",
+    "        \n",
+    "    def del_first(self):\n",
+    "        del self._first\n",
+    "        \n",
+    "    def get_last(self):\n",
+    "        return self._last\n",
+    "    \n",
+    "    def set_last(self, last):\n",
+    "        self._last = last\n",
+    "    \n",
+    "    def del_last(self):\n",
+    "        del self._last\n",
+    "        \n",
+    "    def get_email(self):\n",
+    "        return self._email\n",
+    "    \n",
+    "    def set_email(self, email):\n",
+    "        self._email = email\n",
+    "    \n",
+    "    def del_email(self):\n",
+    "        del self._email\n",
+    "        \n",
+    "    def fullname(self):\n",
+    "        return \"{} {}\".format(self.first, self.last)\n",
+    "        \n",
+    "    def yell_name(self):\n",
+    "        return \"{}\".format(self.fullname().upper())\n",
+    "    \n",
+    "    first = property(get_first, set_first, del_first)\n",
+    "    last = property(get_last, set_last, del_last)\n",
+    "    email = property(get_email, set_email, del_email)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ron\n",
+      "Burgundy\n",
+      "ron.burgundy1984@gmail.com\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'RON BURGUNDY'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "passenger = Passenger()\n",
     "passenger.first = \"Ron\"\n",
@@ -146,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
